# SuperTx-Backend

./: LICENSE  README.md  ambiente-virtual-poetry.md  app.py  logger.py  motivacao-projeto.md  pyproject.toml
database/: db.sqlite3
model/: __init__.py  abastecimento.py  base.py  clientes.py  corrida.py
schemas/: __init__.py  abastecimento.py  clientes.py  corrida.py  corridas.py  error.py
