[tool.poetry]
name = "SuperTx-backend"
version = "0.1.0"
description = "projeto relacionado a primeira sprint do curso de pós graduação de engenharia de software da PuC Rio" 
authors = ["Camila Caldas <camisccb@gmail.com>"]
readme = "README.md"
packages = [{include = "buddyconnect_backend"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
flask-openapi3 = "^3.0.0"
flask-cors = "^4.0.0"
sqlalchemy = "^2.0.23"
sqlalchemy-utils = "^0.41.1"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
